--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,40 @@
+<%= @post.title %>
 
+<%= @post.content %>
+
+Categories: <%= @post.categories.map(&:name).join(' ') %>
+
+<% @post.comments.each do |comment| %>
+    <%= comment.user.username %> says: <%= comment.content %>
+<% end %>
+
+Commentors:
+<ul>
+<% @post.users.distinct.each do |user| %>  
+    <li>    
+        <%= link_to user.username, user_path(user) %>  
+    </li>
+    <% end %>
+</ul>
+
+<%= form_for @post.comments.build do |f| %>    
+    <%= f.hidden_field :post_id %>    
+    #above associates new comment with post     
+    <p>      
+        <%= f.collection_select :user_id, User.all, :id, :username %>    
+    </p>    
+    #drop down menu       
+    
+    <%= f.fields_for :user, User.new do |user_fields| %>      
+        <%= user_fields.label :username %>      
+        <%= user_fields.text_field :username %>    
+    <% end %>    
+    #new user        
+    
+    <p>      
+        <%= f.label :content, "New Comment" %><br>      
+        <%= f.text_area :content %>    
+    </p>    
+    <br/>    
+    <%= f.submit %>  
+<% end %> 
